<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    tools:context=".tugas3.activityhome"
    android:padding="@dimen/dimen25"
    android:background="@color/colorBlueCalm">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dimen44"
        android:layout_height="@dimen/dimen44"
        android:contentDescription="@string/desc"
        app:srcCompat="@drawable/ic_child_friendly" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen72"
        android:layout_marginLeft="@dimen/dimen72"
        android:text="@string/home_txt_ngasuh"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font20"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen72"
        android:layout_marginLeft="@dimen/dimen72"
        android:paddingTop="@dimen/dimen30"
        android:text="@string/login_txt_ngasuh_desc"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/txt_hallo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_marginTop="@dimen/dimen70"
        android:layout_marginEnd="@dimen/dimen50"
        android:layout_marginRight="@dimen/dimen50"
        android:gravity="center"
        android:text="@string/home_txt_hallo"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font18"
        android:textStyle="bold"


        />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_marginTop="@dimen/dimen95"
        android:layout_marginEnd="@dimen/dimen50"
        android:layout_marginRight="@dimen/dimen50"
        android:gravity="center"
        android:text="@string/home_txt_nama"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/font18"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen3"
        android:layout_below="@id/txt_name"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dimen120"
        android:layout_marginLeft="@dimen/dimen120"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginEnd="@dimen/dimen120"
        android:layout_marginRight="@dimen/dimen120"
        android:background="#ffffff" />

    <TextView

        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen40"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dimen50"
        android:layout_marginLeft="@dimen/dimen50"
        android:layout_marginTop="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen50"
        android:layout_marginRight="@dimen/dimen50"
        android:background="@drawable/button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/home_txt_logout"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />


</RelativeLayout>
